traversal.snake.Snake.scala.error
Compilation error:
Snake:1: error: Boolean does not take parameters
override def run() {def positionFinale() {if (estFaceMur()(&&getDirection()==Direction.EST)) {gauche();if (estFaceMur()) {return} else {gauche(); avance();gauche();}}
                                                          ^Snake:3: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
                                          else {return false}}
                                                       ^Snake:3: warning: enclosing method positionFinale has result type Unit: return value discarded
                                          else {return false}}
                                                ^